--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "firebase": "^12.3.0",
@@ -21,6 +22,7 @@
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.23.0",
